Implemented the AccessData class with DotENV to secure the credentials and updated the rest